fixtures/errors/incomplete_fn/build/lib/index.d.ts
declare function add(a: number, b: number): number;
declare const x: 5;
